--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-photo-view": "^1.2.4",
     "react-slick": "^0.29.0",
     "sass": "^1.75.0",
     "slick-carousel": "^1.8.1"
