--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-photo-view": "^1.2.4",
     "react-slick": "^0.29.0",
     "sass": "^1.75.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "postcss": "^8",
