--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
+    "@stripe/react-stripe-js": "^2.7.1",
+    "@stripe/stripe-js": "^3.4.0",
     "axios": "^1.6.8",
+    "emailjs": "^4.0.1",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
@@ -17,6 +21,7 @@
     "react-slick": "^0.29.0",
     "sass": "^1.75.0",
     "slick-carousel": "^1.8.1",
+    "stripe": "^15.6.0",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
