--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "@stripe/react-stripe-js": "^2.7.1",
     "@stripe/stripe-js": "^3.4.0",
     "axios": "^1.6.8",
+    "crypto": "^1.0.1",
+    "cryptojs": "^2.5.3",
     "emailjs": "^4.0.1",
+    "js-md5": "^0.8.3",
+    "md5": "^2.3.0",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
