--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18",
     "react-photo-view": "^1.2.4",
     "react-slick": "^0.29.0",
+    "react-toastify": "^10.0.5",
     "sass": "^1.75.0",
     "slick-carousel": "^1.8.1",
     "stripe": "^15.6.0",
