--- a/package.json
+++ b/package.json
@@ -10,23 +10,25 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
+    "@next/third-parties": "^14.2.3",
     "@stripe/react-stripe-js": "^2.7.1",
-    "@stripe/stripe-js": "^3.4.0",
+    "@stripe/stripe-js": "^3.4.1",
     "axios": "^1.6.8",
     "crypto": "^1.0.1",
     "cryptojs": "^2.5.3",
     "emailjs": "^4.0.1",
     "js-md5": "^0.8.3",
     "md5": "^2.3.0",
-    "next": "14.2.2",
+    "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-ga4": "^2.1.0",
     "react-photo-view": "^1.2.4",
     "react-slick": "^0.29.0",
     "react-toastify": "^10.0.5",
     "sass": "^1.75.0",
     "slick-carousel": "^1.8.1",
-    "stripe": "^15.6.0",
+    "stripe": "^15.8.0",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
